deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paastest
  labels:
    application: paastest
spec:
  replicas: 1
  selector:
    matchLabels:
      name: paastest
  template:
    metadata:
      labels:
        name: paastest
    spec:
      containers:
        - name: paastest
          image: registry_url/default/paastest:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 256Mi
              cpu: 10m
            limits:
              memory: 2048Mi
              cpu: 500m
          volumeMounts:
          - name: tz-config
            mountPath: /etc/localtime
          - name: log-dump
            mountPath: /log
      imagePullSecrets:
        - name: regcred
      volumes:
      - name: tz-config
        hostPath:
          path: /usr/share/zoneinfo/Asia/Seoul
      - name: log-dump
        hostPath:
          path: /log

---
apiVersion: v1
kind: Service
metadata:
  name: paastest
  labels:
      application: paastest
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: paastest

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: paastest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - host: paastest.ingress_url
    http:
     paths:
     - path: /
       backend:
        serviceName: paastest
        servicePort: 8080
